# backend

./: .dockerignore  .env.migrations.template  .env.pg.template  .env.pgadmin.template  .env.server.template  .env.template  .gitignore  Dockerfile  ENTIDADES_BACKEND.md  README.md  compose.yaml  create-tables-temp.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: backend-implementer.agent.md
.github/instructions/: migrations.instructions.md  tests.instructions.md
.github/prompts/: new-endpoint.prompt.md
.github/workflows/: backend-ci.yaml  ci.yaml
alembic/: env.py
alembic/versions/: 1f4b8d2c9e31_add_user_listing_interactions.py  3297ee9ed324_add_categories_and_listings.py  3d567fecb68e_add_user.py  8f3c0a4d2c1b_add_user_auth.py  9e218e26a345_add_categories_and_listings.py  c4b7e9a21f6d_add_marketplace_operational_schema.py
analytics/dbt/: .user.yml  dbt_project.yml  profiles.yml
analytics/dlt/: README.md  (+1 more)
docs/: ANALYTICS.md  ANALYTICS_STAR_MODEL.md  APP_DB_MODEL.md  ELT_pipeline.excalidraw  bq5_avg_time_to_publish.md  data_pipeline_explicacion.md  endpoints-backend.md  modelo-dominio-mvp.md  modelo-dominio-mvp.mmd
env_templates/: .env.load_fake.template  .env.migrations.template  .env.pg.template
images/: Dockerfile.migrations  Dockerfile.server
load_fake/: Dockerfile  fake.py  main.py  pyproject.toml
marketplace-andes-workspace/: workspace.yml
migrations/: .dockerignore  Dockerfile  pyproject.toml
migrations/alembic/: env.py
migrations/alembic/versions/: 4c156d1e4ab6_add_user_profile.py  6a5e7da4aca3_add_followers_to_user.py  7b3a1d2e9f40_add_user_listing_interactions.py  8d4e7f6c1b3a_add_interaction_events.py  93f888505946_.py  a1b2c3d4e5f6_add_rating_to_user_profiles.py  a3f5b8c9d0e1_add_first_interaction_at.py  a4b5c6d7e8f9_add_chat_tables.py  b1c2d3e4f5a6_add_purchases.py  b5e7f1a2d3c4_add_listings_and_status_history.py  b8e4c1a9f3d2_add_user_listing_favorite.py  c2d3e4f5a6b7_add_seller_rating_to_purchases.py  c7f4e2a9d1b8_add_listing_status_constraints_and_indexes.py  c9d0e1f2a3b4_add_listing_location_name.py  d2c9a8b7e6f5_add_categories_and_extend_listings_to_match_dto.py  e7a8b9c0d1e2_add_profile_visit_events.py  e8c1b0a9f2d4_align_users_with_current_model.py  f1a9d3c6b2e4_align_schema_with_current_entities.py  f9b8c7d6e5a4_merge_chat_and_purchases_heads.py  fa12bc34de56_merge_final_heads.py
migrations/scripts/: entrypoint.sh
scripts/: env_template.py
server/: .dockerignore  Dockerfile  pyproject.toml
server/integration/: conftest.py
server/integration/auth/: test_auth.py
server/integration/categories/: test_categories.py
server/integration/db/: test_db.py
server/integration/listings/: test_listings.py
server/integration/users/: test_users.py
server/scripts/: entrypoint.sh
server/src/marketplace_andes/: app.py  config.py  exception_handlers.py  lifecycle.py
server/src/marketplace_andes/auth/: dependencies.py  exceptions.py  routes.py  schemas.py  service.py
server/src/marketplace_andes/auth/jwt/: dependencies.py  schemas.py  service.py
server/src/marketplace_andes/auth/password/: dependencies.py  interface.py
server/src/marketplace_andes/auth/session/: dependencies.py  models.py  repository.py
server/src/marketplace_andes/auth/user/: dependencies.py  models.py  repository.py
server/src/marketplace_andes/categories/: __init__.py  models.py  routes.py  schemas.py  service.py
server/src/marketplace_andes/chat/: models.py  repository.py  routes.py  schemas.py  service.py  ws_manager.py
server/src/marketplace_andes/db/: config.py  dependencies.py
server/src/marketplace_andes/favorites/: models.py  routes.py  schemas.py  service.py
server/src/marketplace_andes/health/: routes.py
server/src/marketplace_andes/interactions/: __init__.py  models.py  routes.py  schemas.py  service.py
server/src/marketplace_andes/ip/: dependencies.py  service.py
server/src/marketplace_andes/listings/: enums.py  models.py  routes.py  schemas.py  service.py
server/src/marketplace_andes/profile_visits/: models.py  schemas.py  service.py
server/src/marketplace_andes/purchases/: models.py  routes.py  schemas.py  service.py
server/src/marketplace_andes/uploads/: cloudinary_service.py  routes.py  schemas.py
server/src/marketplace_andes/users/: dependencies.py  models.py  repository.py  routes.py  schemas.py
server/tests/auth/: test_auth.py
tests/: conftest.py  test_db.py  test_db_maintenance.py  test_entity_creation.py  test_getters_and_scripts.py  test_listings.py
viz/: build_warehouse.py  generate_charts.py  run_pipeline.py  sample_data.py
(+191 files in other folders)
