[project]
name = "marketplace-andes-backend"
version = "0.0.1"
description = "Marketplace Andes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary]>=3.3.3",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.37",
]

[project.scripts]
seed-db = "marketplace_andes_backend.scripts.seed_db:main"
clear-db = "marketplace_andes_backend.scripts.clear_db:main"

[project.optional-dependencies]
otel = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "opentelemetry-instrumentation-psycopg>=0.60b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
]

[tool.fastapi]
entrypoint = "src.marketplace_andes_backend.app.main:app"

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
